Fix fifo pipe writing issues (#4)
* fully migrated to an interface implementation world, instead of function references

* changed to only a rc2 instead of a major change for simplicity

* hardcoded 'apply' to guarentee compatibility

* migrated interface to abstract class, created annotation to find the right method, adjusts how we search for the right method

* added a jenkins file

* fixing weird naming issue

* updated to releasable version (1.2.0)

* testing release

* trying to get things to compile with ojdk 11 properly

* fully migrated to an interface implementation world, instead of function references

* changed to only a rc2 instead of a major change for simplicity

* migrated interface to abstract class, created annotation to find the right method, adjusts how we search for the right method

* added a jenkins file

* fixing weird naming issue

* updated to releasable version (1.2.0)

* testing release

* trying to get things to compile with ojdk 11 properly

* fixed publish/compile issues, updated to sbt 1.2.7. "fixed" serializable exception output format

* updated testing release candiate

* simplified imports, simplified test cases

* solved a illegal reflection issue with gson, discovered a new failure state with ojdk 11 that wasn't caught properly by the output parser

* changing to major version as we've made some backwrds incompatible changes (and it works now)

* fixed tests, fixed error message parsing. Updating to release 1.2.1 & 2.0.0

* updated to 2.0.0

* fixed naming convention issue

* responded to some pmcq requests, updated build.sbt to potential new version (2.0.0 is already relesed)

* updated stdin reader to use try with resources to properly close stdin read pipe

* replaced output file writing with try resources pattern

* remove unnecessary file opening process with /tmp/algoout