@@ -3,23 +3,24 @@ name := "algorithm-handler"
 
 organization := "com.algorithmia"
 
-version := "1.2.0"
+version := "2.0.1"
+
 
 autoScalaLibrary := false
 
 // More compiler warnings
-scalacOptions ++= Seq("-deprecation", "-unchecked", "-feature", "-Xlint")
+scalacOptions ++= Seq("-deprecation", "-unchecked", "-feature", "-Xlint", "--illegal-access=permit")
 
 javacOptions ++= Seq("-source", "8", "-target", "8")
 
 javacOptions in doc := Seq("-source", "8")
 
 libraryDependencies ++= Seq(
-  "com.google.code.gson" % "gson" % "2.6.2",
+  "com.google.code.gson" % "gson" % "2.8.5",
   "org.apache.httpcomponents" % "httpasyncclient" % "4.1.1",
   "commons-io" % "commons-io" % "2.5",
+  "org.apache.commons" % "commons-lang3" % "3.5",
   "com.novocode" % "junit-interface" % "0.11" % "test->default",
-  "junit" % "junit" % "4.12",
   "org.springframework" % "spring-core" % "5.1.7.RELEASE"
 )
 
